# hass-miner

./: .cookiecutter.json  .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  README.md  hacs.json  info.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.devcontainer/: configuration.yaml  devcontainer.json
.github/workflows/: code-lint.yml  constraints.txt  hass-lint.yaml  labeler.yml  lint.yml  release-drafter.yml  release.yml  tests.yaml
config/: configuration.yaml
custom_components/miner/: __init__.py  config_flow.py  const.py  coordinator.py  device_action.py  manifest.json  number.py  patch.py  select.py  sensor.py  service.py  services.py  services.yaml  strings.json  switch.py
custom_components/miner/translations/: en.json
miner_/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  switch.py
miner_/translations/: en.json  fr.json  nb.json
scripts/: develop  test_device_action_workmode.py
tests/: __init__.py  conftest.py  const.py  test_api.py  test_config_flow.py  test_init.py  test_switch.py
