[tool.poetry]
name = "hass-miner"
version = "1.1.19"
description = ""
authors = ["Michael Schmid <michael@amazee.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.0,<3.14"
homeassistant = "^2025.1.1"
colorlog = "^6.9.0"
ruff = "^0.9.3"
pyasic = "^0.70.3"
setuptools = "^75.6.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
